--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="body_div">
-        <!-- NAVBAR SECTION --> 
+        <!-- NAVBAR SECTION -->
         <nav>
             <div>
                 <div>
@@ -59,22 +59,22 @@
             <div class="row card_one">
                 <div class="col-md-3 col-sm-12 ">
                     <img src="./images/c1i1.png" alt="" class="c1i1">
-                    <h6 >Greys Vage</h6> <br>
+                    <h6>Greys Vage</h6> <br>
                     <button class="c1btn">6 Days Remaining</button>
                 </div>
                 <div class="col-md-3 col-sm-12 ">
                     <img src="./images/c1i2.png" alt="" class="c1i1">
-                    <h6 >Greys Vage</h6> <br>
+                    <h6>Greys Vage</h6> <br>
                     <button class="c1btn">6 Days Remaining</button>
                 </div>
                 <div class="col-md-3 col-sm-12 ">
                     <img src="./images/c1i3.png" alt="" class="c1i1">
-                    <h6 >Greys Vage</h6> <br>
+                    <h6>Greys Vage</h6> <br>
                     <button class="c1btn">7 Days Remaining</button>
                 </div>
                 <div class="col-md-3 col-sm-12 ">
                     <img src="./images/c1i4.png" alt="" class="c1i1">
-                    <h6 >Greys Vage</h6> <br>
+                    <h6>Greys Vage</h6> <br>
                     <button class="c1btn">7 Days Remaining</button>
                 </div>
             </div>
@@ -122,7 +122,8 @@
             </div>
             <div class="row card2">
                 <div class="col-md-1">
-                   
+                    <button class="arrow_btn">
+                        < </button>
                 </div>
                 <div class="col-md-2">
                     <img src="./images/Rectangle 336.png" alt="" class="card2_img">
@@ -170,7 +171,8 @@
                     <button class="card2_btn">Order Now</button>
                 </div>
                 <div class="col-md-1">
-                  
+                    <button class="arrow_btn">
+                        > </button>
                 </div>
             </div>
         </div>
@@ -618,21 +620,26 @@
                 </div>
             </div>
 
+            <div class="container">
+                <div class="row footer_line">
+                    <div class="col-md-4 text_color">
+                        <p>All rights Reserved © Your Company, 2023</p>
+                    </div>
+                    <div class="col-md-2 text_color last_div">
+                        <p>Made with  by
+                            <a class="text_color" href="https://github.com/Murtaxa-Baig/"
+                                target="_blank">Murtaxa-Baig</a>
+                        </p>
 
+                    </div>
+                </div>
 
-
-
-
-
+            </div>
 
 
 
 
         </div>
-
-
-
-
     </div>
 </body>
 
