--- a/index.html
+++ b/index.html
@@ -13,13 +13,7 @@
 <body>
     <div class="body_div">
         <!-- NAVBAR SECTION -->
-        <nav>
-            <div>
-                <div>
-                    <div></div>
-                </div>
-            </div>
-        </nav>
+        
 
         <!-- first section -->
         <div class="container-fluid first_section">
@@ -432,7 +426,7 @@
         <!-- Next section  -->
         <div class="container-fluid simple">
             <div class="row">
-                <div class="container">
+                <div class="container shadow">
                     <div class="row simple_row">
                         <div class="col-md-3">
                             <h2 class="simple_heading">Daily Discounts</h2>
@@ -454,11 +448,11 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="container-fluid">
+        <div class="container-fluid">
             <div class="row">
-                <img src="./images/App Download.svg" alt="" class="large_img">
+                <img src="./images/AppDownload.png" alt="" class="large_img">
             </div>
-        </div> -->
+        </div>
 
 
 
