--- a/index.html
+++ b/index.html
@@ -13,7 +13,39 @@
 <body>
     <div class="body_div">
         <!-- NAVBAR SECTION -->
-        
+        <div></div>
+        <!-- <nav class="">
+            <div class="container">
+                <div class="row">
+                    <div class=".col-md-2">
+                        <img src="./images/main_icon.svg" alt="">
+                        <span>
+                            <h2 class="food">food</h2>
+                        </span>
+                        <span>
+                            <h2 class="food">waGon</h2>
+                        </span>
+                    </div>
+                    <div class=".col-md-5">
+                        <p>Deliver to:</p>
+                        <img src="./images/input_location.svg" alt="">
+                        <p>Current Location</p>
+                        <p>Mohammadpur Bus Stand, Dhaka</p>
+
+                    </div>
+                    <div class=".col-md-2">
+                        <img src="./images/search.svg" alt="">
+                        <p>Search Food</p>
+                        <button>
+                            <img src="./images/user.svg" alt="">
+                            <p>Login</p>
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+
+        </nav> -->
 
         <!-- first section -->
         <div class="container-fluid first_section">
