--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="body_div">
         <!-- NAVBAR SECTION -->
         <div></div>
+        <div></div>
         <!-- <nav class="">
             <div class="container">
                 <div class="row">
