--- a/index.html
+++ b/index.html
@@ -13,32 +13,31 @@
 <body>
     <div class="body_div">
         <!-- NAVBAR SECTION -->
-        <div></div>
-        <div></div>
-        <!-- <nav class="">
-            <div class="container">
-                <div class="row">
-                    <div class=".col-md-2">
-                        <img src="./images/main_icon.svg" alt="">
+        
+        <nav class="navbar">
+            <div class="container  ">
+                <div class="row navbar_row">
+                    <div class="col-md-2 display_property">
+                        <img src="./images/main_icon.svg" alt="" class="navbar_icon">
                         <span>
                             <h2 class="food">food</h2>
                         </span>
                         <span>
-                            <h2 class="food">waGon</h2>
+                            <h2 class="waGon">waGon</h2>
                         </span>
                     </div>
-                    <div class=".col-md-5">
-                        <p>Deliver to:</p>
-                        <img src="./images/input_location.svg" alt="">
-                        <p>Current Location</p>
-                        <p>Mohammadpur Bus Stand, Dhaka</p>
+                    <div class="col-md-5 display_property">
+                        <p class="padding_property">Deliver to:
+                        <img src="./images/input_location.svg" alt="" class="navbar_location">
+                        Current Location Mohammadpur Bus Stand, Dhaka
+                        </p>
 
                     </div>
-                    <div class=".col-md-2">
-                        <img src="./images/search.svg" alt="">
-                        <p>Search Food</p>
-                        <button>
-                            <img src="./images/user.svg" alt="">
+                    <div class="col-md-2 display_property">
+                        <img src="./images/search copy.svg" alt="" class="navbar_search">
+                        <p class="padding_property">SearchFood</p>
+                        <button class="navbar_btn">
+                            <img src="./images/user.svg" alt="" class="btn_img">
                             <p>Login</p>
                         </button>
                     </div>
@@ -46,7 +45,7 @@
                 </div>
             </div>
 
-        </nav> -->
+        </nav>
 
         <!-- first section -->
         <div class="container-fluid first_section">
