--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="body_div">
         <!-- NAVBAR SECTION -->
-        
+
         <nav class="navbar">
             <div class="container  ">
                 <div class="row navbar_row">
@@ -28,8 +28,8 @@
                     </div>
                     <div class="col-md-5 display_property">
                         <p class="padding_property">Deliver to:
-                        <img src="./images/input_location.svg" alt="" class="navbar_location">
-                        Current Location Mohammadpur Bus Stand, Dhaka
+                            <img src="./images/input_location.svg" alt="" class="navbar_location">
+                            Current Location Mohammadpur Bus Stand, Dhaka
                         </p>
 
                     </div>
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        <img src="./images/Image.png" alt="" class="first_img">
+                        <img src="./images/firsrt_img.png" alt="" class="first_img">
                     </div>
                 </div>
             </div>
@@ -84,22 +84,57 @@
         <div class="container">
             <div class="row card_one">
                 <div class="col-md-3 col-sm-12 ">
-                    <img src="./images/c1i1.png" alt="" class="c1i1">
+                    <div class="c1i1" >
+                        <div class="display_property1">
+                            <p class="number">15</p>
+                            <div>
+                                <p class="percentage">%</p>
+                                <p class="off">off</p>
+                            </div>
+                        </div>
+
+                    </div>
                     <h6>Greys Vage</h6> <br>
                     <button class="c1btn">6 Days Remaining</button>
                 </div>
                 <div class="col-md-3 col-sm-12 ">
-                    <img src="./images/c1i2.png" alt="" class="c1i1">
+                    <div class="c1i2">
+                        <div class="display_property1">
+                            <p class="number">10</p>
+                            <div>
+                                <p class="percentage">%</p>
+                                <p class="off">off</p>
+                            </div>
+                        </div>
+                    </div>
                     <h6>Greys Vage</h6> <br>
                     <button class="c1btn">6 Days Remaining</button>
                 </div>
                 <div class="col-md-3 col-sm-12 ">
-                    <img src="./images/c1i3.png" alt="" class="c1i1">
+                    <div class="c1i3">
+                        <div class="display_property1">
+                            <p class="number">25</p>
+                            <div>
+                                <p class="percentage">%</p>
+                                <p class="off">off</p>
+                            </div>
+                        </div>
+
+                    </div>
                     <h6>Greys Vage</h6> <br>
                     <button class="c1btn">7 Days Remaining</button>
                 </div>
                 <div class="col-md-3 col-sm-12 ">
-                    <img src="./images/c1i4.png" alt="" class="c1i1">
+                    <div class="c1i4">
+                        <div class="display_property1">
+                            <p class="number">20</p>
+                            <div>
+                                <p class="percentage">%</p>
+                                <p class="off">off</p>
+                            </div>
+                        </div>
+
+                    </div>
                     <h6>Greys Vage</h6> <br>
                     <button class="c1btn">7 Days Remaining</button>
                 </div>
