--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="navbar">
             <div class="container  ">
                 <div class="row navbar_row">
-                    <div class="col-md-2 display_property">
+                    <div class="col-md-2 col-sm-12 display_property">
                         <img src="./images/main_icon.svg" alt="" class="navbar_icon">
                         <span>
                             <h2 class="food">food</h2>
@@ -26,14 +26,14 @@
                             <h2 class="waGon">waGon</h2>
                         </span>
                     </div>
-                    <div class="col-md-5 display_property">
+                    <div class="col-md-5 col-sm-12 display_property">
                         <p class="padding_property">Deliver to:
                             <img src="./images/input_location.svg" alt="" class="navbar_location">
                             Current Location Mohammadpur Bus Stand, Dhaka
                         </p>
 
                     </div>
-                    <div class="col-md-2 display_property">
+                    <div class="col-md-2 col-sm-12 display_property">
                         <img src="./images/search copy.svg" alt="" class="navbar_search">
                         <p class="padding_property">SearchFood</p>
                         <button class="navbar_btn">
@@ -182,11 +182,11 @@
                 <h1>Popular items</h1>
             </div>
             <div class="row card2">
-                <div class="col-md-1">
+                <div class="col-md-1 col-sm-12 card_two_col">
                     <button class="arrow_btn">
                         < </button>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 col-sm-12 card_two_col">
                     <img src="./images/Rectangle 336.png" alt="" class="card2_img">
                     <h6>Cheese Burger</h6>
                     <div class="card2_div">
@@ -195,7 +195,7 @@
                     </div>
                     <button class="card2_btn">Order Now</button>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 col-sm-12 card_two_col">
                     <img src="./images/Rectangle 336 (1).png" alt="" class="card2_img">
                     <h6>Cheese Burger</h6>
                     <div class="card2_div">
@@ -204,7 +204,7 @@
                     </div>
                     <button class="card2_btn">Order Now</button>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 col-sm-12 card_two_col">
                     <img src="./images/Rectangle 336 (2).png" alt="" class="card2_img">
                     <h6>Cheese Burger</h6>
                     <div class="card2_div">
@@ -213,7 +213,7 @@
                     </div>
                     <button class="card2_btn">Order Now</button>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 col-sm-12 card_two_col">
                     <img src="./images/Rectangle 336 (3).png" alt="" class="card2_img">
                     <h6>Cheese Burger</h6>
                     <div class="card2_div">
@@ -222,7 +222,7 @@
                     </div>
                     <button class="card2_btn">Order Now</button>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 col-sm-12 card_two_col">
                     <img src="./images/Rectangle 336 (4).png" alt="" class="card2_img">
                     <h6>Cheese Burger</h6>
                     <div class="card2_div">
@@ -231,7 +231,7 @@
                     </div>
                     <button class="card2_btn">Order Now</button>
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-1 col-sm-12 card_two_col">
                     <button class="arrow_btn">
                         > </button>
                 </div>
@@ -248,7 +248,7 @@
                 <h1>Featured Restaurants</h1>
             </div>
             <div class="row card3_row">
-                <div class="col-md-3 col-sm-12 p-3">
+                <div class="col-md-3 col-sm-12 card3_col">
                     <div class="card3_1">
                         <button class="card3_btn1">
                             <img src="./images/card3_icon1.svg" alt="" class=" card3_btn_disc">
@@ -272,7 +272,7 @@
                     </div>
                     <button class="card3_btn_disc_pink">Opens tomorrow</button>
                 </div>
-                <div class="col-md-3 col-sm-12 p-3">
+                <div class="col-md-3 col-sm-12 card3_col">
                     <div class="card3_2">
                         <button class="card3_btn1">
                             <img src="./images/card3_icon1.svg" alt="" class=" card3_btn_disc">
@@ -295,7 +295,7 @@
                     </div>
                     <button class="card3_btn_disc_pink">Opens tomorrow</button>
                 </div>
-                <div class="col-md-3 col-sm-12 p-3">
+                <div class="col-md-3 col-sm-12  card3_col">
                     <div class="card3_3">
                         <button class="card3_btn1">
                             <img src="./images/card3_icon1.svg" alt="" class=" card3_btn_disc">
@@ -318,7 +318,7 @@
                     </div>
                     <button class="card3_btn_disc_green">Open Now</button>
                 </div>
-                <div class="col-md-3 col-sm-12 py-3">
+                <div class="col-md-3 col-sm-12  card3_col">
                     <div class="card3_4">
                         <button class="card3_btn1">
                             <img src="./images/card3_icon1.svg" alt="" class=" card3_btn_disc">
@@ -345,7 +345,7 @@
         </div>
         <div class="container ">
             <div class="row card3_row">
-                <div class="col-md-3 col-sm-12 p-3">
+                <div class="col-md-3 col-sm-12  card3_col">
                     <div class="card3_5">
                         <button class="card3_btn1">
                             <img src="./images/card3_icon1.svg" alt="" class=" card3_btn_disc">
@@ -369,7 +369,7 @@
                     </div>
                     <button class="card3_btn_disc_green">Open Now</button>
                 </div>
-                <div class="col-md-3 col-sm-12 p-3">
+                <div class="col-md-3 col-sm-12  card3_col">
                     <div class="card3_6">
                         <button class="card3_btn1">
                             <img src="./images/card3_icon1.svg" alt="" class=" card3_btn_disc">
@@ -392,7 +392,7 @@
                     </div>
                     <button class="card3_btn_disc_green">Open Now</button>
                 </div>
-                <div class="col-md-3 col-sm-12 p-3">
+                <div class="col-md-3 col-sm-12  card3_col">
                     <div class="card3_7">
                         <button class="card3_btn1">
                             <img src="./images/card3_icon1.svg" alt="" class=" card3_btn_disc">
@@ -415,7 +415,7 @@
                     </div>
                     <button class="card3_btn_disc_green">Open Now</button>
                 </div>
-                <div class="col-md-3 col-sm-12 py-3">
+                <div class="col-md-3 col-sm-12  card3_col">
                     <div class="card3_8">
                         <button class="card3_btn1">
                             <img src="./images/card3_icon1.svg" alt="" class=" card3_btn_disc">
@@ -696,10 +696,6 @@
                 </div>
 
             </div>
-
-
-
-
         </div>
     </div>
 </body>
