--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <p class="padding_property">SearchFood</p>
                         <button class="navbar_btn">
                             <img src="./images/user.svg" alt="" class="btn_img">
-                            <p>Login</p>
+                            <span>Login</span>
                         </button>
                     </div>
 
@@ -191,7 +191,7 @@
                     <h6>Cheese Burger</h6>
                     <div class="card2_div">
                         <img src="./images/card2_icon.svg" alt="">
-                        <p>Burger Arena</p>
+                        <span>Burger Arena</span>
                     </div>
                     <button class="card2_btn">Order Now</button>
                 </div>
@@ -200,7 +200,7 @@
                     <h6>Cheese Burger</h6>
                     <div class="card2_div">
                         <img src="./images/card2_icon.svg" alt="">
-                        <p>Burger Arena</p>
+                        <span>Burger Arena</span>
                     </div>
                     <button class="card2_btn">Order Now</button>
                 </div>
@@ -209,7 +209,7 @@
                     <h6>Cheese Burger</h6>
                     <div class="card2_div">
                         <img src="./images/card2_icon.svg" alt="">
-                        <p>Burger Arena</p>
+                        <span>Burger Arena</span>
                     </div>
                     <button class="card2_btn">Order Now</button>
                 </div>
@@ -218,7 +218,7 @@
                     <h6>Cheese Burger</h6>
                     <div class="card2_div">
                         <img src="./images/card2_icon.svg" alt="">
-                        <p>Burger Arena</p>
+                        <span>Burger Arena</span>
                     </div>
                     <button class="card2_btn">Order Now</button>
                 </div>
@@ -227,7 +227,7 @@
                     <h6>Cheese Burger</h6>
                     <div class="card2_div">
                         <img src="./images/card2_icon.svg" alt="">
-                        <p>Burger Arena</p>
+                        <span>Burger Arena</span>
                     </div>
                     <button class="card2_btn">Order Now</button>
                 </div>
@@ -552,8 +552,8 @@
                 <div class="col-md-4 col-sm-12">
                     <div class="c5_subdiv2">
                         <h1>Celebrate parties with <b class="heading_color">Fried Chicken</b></h1>
-                        <p>Get the best fried chicken smeared with a lip <br> smacking lemon chili flavor. Check out
-                            <br>
+                        <p>Get the best fried chicken smeared with a lip <br class="br_"> smacking lemon chili flavor. Check out
+                            <br class="br_">
                             best deals for fried chicken.
                         </p>
                         <button class="card5_btn2">Proceed to order ></button>
@@ -698,7 +698,6 @@
             </div>
         </div>
     </div>
-    <div><div></div></div>
 </body>
 
 </html>
