--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="container">
             <div class="row card_one">
                 <div class="col-md-3 col-sm-12 ">
-                    <div class="c1i1" >
+                    <div class="c1i1">
                         <div class="display_property1">
                             <p class="number">15</p>
                             <div>
@@ -552,7 +552,8 @@
                 <div class="col-md-4 col-sm-12">
                     <div class="c5_subdiv2">
                         <h1>Celebrate parties with <b class="heading_color">Fried Chicken</b></h1>
-                        <p>Get the best fried chicken smeared with a lip <br class="br_"> smacking lemon chili flavor. Check out
+                        <p>Get the best fried chicken smeared with a lip <br class="br_"> smacking lemon chili flavor.
+                            Check out
                             <br class="br_">
                             best deals for fried chicken.
                         </p>
